[gd_scene load_steps=7 format=3 uid="uid://dkbhys3yb3puy"]

[ext_resource type="Script" uid="uid://dwu5ia2hsfn0b" path="res://RandomMatch/RandomMatch.gd" id="1_t8qfu"]
[ext_resource type="PackedScene" uid="uid://db3kggeq1vlgj" path="res://Color_circles/Main Color/Main_Color.tscn" id="2_24q3n"]
[ext_resource type="PackedScene" uid="uid://bjgc08ala0h7v" path="res://Background/Background.tscn" id="3_d0s2v"]
[ext_resource type="PackedScene" uid="uid://dsd3ai7xtupa" path="res://Color_circles/Player Color/player_color.tscn" id="4_uhbon"]
[ext_resource type="PackedScene" uid="uid://b6im1jbu6vwgk" path="res://UI/RandomMatchUI/win_screen.tscn" id="5_cjun7"]

[sub_resource type="Curve2D" id="Curve2D_k3v36"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -8, -3, 0, 0, 0, 0, 1158, -3, 0, 0, 0, 0, 1155, 652, 0, 0, 0, 0, 2, 657, 0, 0, 0, 0, -8, -3)
}
point_count = 5

[node name="RandomMatch" type="Node2D"]
process_mode = 1
script = ExtResource("1_t8qfu")

[node name="MainColor" parent="." instance=ExtResource("2_24q3n")]
position = Vector2(551, 288)

[node name="Background" parent="." instance=ExtResource("3_d0s2v")]
layer = -1

[node name="Color_spawn" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
autostart = true

[node name="PlayerColor" parent="." instance=ExtResource("4_uhbon")]
position = Vector2(84, 577)

[node name="WinScreen" parent="." instance=ExtResource("5_cjun7")]
visible = false

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_k3v36")

[node name="ColorSpawnPath" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(-8, -3)

[connection signal="timeout" from="Color_spawn" to="." method="_on_color_spawn_timeout"]
